# librashader

./: .gitignore  .gitmodules  BROKEN_SHADERS.md  CLI.md  Cargo.toml  MIGRATION-ABI2.md  README.md  basic_with_maxscale.vert.spv  crt-nes-mini.dxbc  crt-nes-mini.dxil.nirasm  crt-nes-mini.nirasm  crt-nes-mini.spvasm  librashader.copr.spec  librashader.h  sintest fxc.dsbc.txt  sintest spirv.spvasm  sintest.nirasm
librashader/: Cargo.toml
librashader-cache/: Cargo.toml
librashader-cache/src/: cache.rs  cacheable.rs  compilation.rs  d3d.rs  docsrs.rs  error.rs  key.rs  lib.rs
librashader-capi/: Cargo.toml  build.rs  cbindgen.toml  librashader.h  post_build.rs
librashader-capi/examples/: generate-headers.rs
librashader-capi/src/: ctypes.rs  error.rs  ffi.rs  lib.rs  presets.rs  version.rs  wildcard.rs
librashader-capi/src/reflect/: mod.rs
librashader-capi/src/runtime/: gl.rs  mod.rs
librashader-common/: Cargo.toml
librashader-common/src/: d3d11.rs  d3d12.rs  d3d9.rs  dx.rs  dxgi.rs  gl.rs  image.rs  lib.rs  map.rs  metal.rs  shader_features.rs  string.rs  viewport.rs  vk.rs  wgpu.rs
librashader-pack/: Cargo.toml
librashader-pack/src/: lib.rs
librashader-preprocess/: Cargo.toml
librashader-preprocess/src/: error.rs  include.rs  lib.rs  pragma.rs  stage.rs
librashader-preprocess/tests/: parse_all.rs
librashader-presets/: Cargo.toml
librashader-presets/src/: context.rs  error.rs  extract_if.rs  hdr.rs  lib.rs  preset.rs
librashader-presets/src/parse/: context.rs  mod.rs  preset.rs  token.rs  value.rs
librashader-presets/src/quark/: mod.rs
librashader-presets/src/slang/: mod.rs  parse.rs  token.rs
librashader-presets/tests/: parse_all.rs
librashader-reflect/: Cargo.toml  basic_with_maxscale.vert.spv  crt-geom.vert.spv  out.spirt  out.spirt.html  out.spv  out.structured.spirt  out.structured.spirt.html
librashader-reflect/src/: error.rs  lib.rs
librashader-reflect/src/back/: cross.rs  dxbc.rs  dxil.rs  glsl.rs  hlsl.rs  mod.rs  msl.rs  spirv.rs  targets.rs  wgsl.rs
librashader-reflect/src/front/: glslang.rs  mod.rs  naga.rs  shaderc.rs
librashader-reflect/src/reflect/: cross.rs  mod.rs  naga.rs  presets.rs  rspirv.rs  semantics.rs  spirv_cross.rs  uniforms.rs
librashader-runtime/: Cargo.toml
librashader-runtime-d3d11/: Cargo.toml
librashader-runtime-d3d11/src/: draw_quad.rs  error.rs  filter_chain.rs  filter_pass.rs  framebuffer.rs  graphics_pipeline.rs  hello_triangle.rs  lib.rs  options.rs  parameters.rs  quad_render.rs  render_target.rs  samplers.rs  texture.rs  util.rs  viewport.rs
librashader-runtime-d3d11/tests/: triangle.rs
librashader-runtime-d3d11/tests/hello_triangle/: mod.rs  texture.rs
librashader-runtime-d3d12/: Cargo.toml
librashader-runtime-d3d12/src/: buffer.rs  d3d12_primitives.rs  descriptor_heap.rs  draw_quad.rs  error.rs  filter_chain.rs  filter_pass.rs  framebuffer.rs  graphics_pipeline.rs  heap.rs  hello_triangle.rs  lib.rs  luts.rs  mipmap.rs  options.rs  quad_render.rs  render_target.rs  resource.rs  samplers.rs  texture.rs  util.rs
librashader-runtime-d3d12/tests/: triangle.rs
librashader-runtime-d3d12/tests/hello_triangle/: descriptor_heap.rs  mod.rs
librashader-runtime-dx11/: Cargo.toml
librashader-runtime-dx11/src/: filter_chain.rs  filter_pass.rs  hello_triangle.rs  lib.rs  texture.rs  util.rs
librashader-runtime-gl/: Cargo.toml
librashader-runtime-gl/shader/: blit.frag.glsl  blit.vert.glsl
librashader-runtime-gl/src/: binding.rs  blitter.rs  error.rs  filter_chain.rs  filter_pass.rs  framebuffer.rs  gl3_hello_triangle.rs  hello_triangle.rs  lib.rs  options.rs  quad_render.rs  render_target.rs  samplers.rs  texture.rs  util.rs  viewport.rs
librashader-runtime-gl/src/filter_chain/: chain.rs  filter_impl.rs  mod.rs  parameters.rs
librashader-runtime-gl/src/gl/: framebuffer.rs  mod.rs  state.rs
librashader-runtime-gl/src/hal/: mod.rs
librashader-runtime-gl/tests/: triangle.rs
librashader-runtime-gl/tests/hello_triangle/: gl3.rs  gl46.rs  mod.rs
librashader-runtime-metal/: Cargo.toml
librashader-runtime-metal/src/: buffer.rs  draw_quad.rs  error.rs  filter_chain.rs  filter_pass.rs  graphics_pipeline.rs  lib.rs  luts.rs  main.rs  options.rs  samplers.rs  texture.rs
librashader-runtime-metal/tests/: triangle.rs
librashader-runtime-metal/tests/hello_triangle/: main.rs
librashader-runtime-vk/: Cargo.toml
librashader-runtime-vk/src/: draw_quad.rs  error.rs  filter_chain.rs  filter_pass.rs  framebuffer.rs  graphics_pipeline.rs  hello_triangle.rs  lib.rs  luts.rs  memory.rs  options.rs  parameters.rs  queue_selection.rs  render_pass.rs  render_target.rs  renderpass.rs  rendertarget.rs  samplers.rs  texture.rs  ubo_ring.rs  util.rs  viewport.rs  vulkan_primitives.rs  vulkan_state.rs
librashader-runtime-vk/src/hello_triangle/: base.rs  command.rs  debug.rs  framebuffer.rs  mod.rs  physicaldevice.rs  pipeline.rs  surface.rs  swapchain.rs  syncobjects.rs  vulkan_base.rs
librashader-runtime-vk/src/hello_triangle_old/: base.rs  mod.rs
librashader-runtime-vk/tests/: triangle.rs
librashader-runtime-vk/tests/hello_triangle/: memory.rs  mod.rs  swapchain.rs  syncobjects.rs  util.rs  vulkan_base.rs
librashader-runtime-wgpu/: Cargo.toml
librashader-runtime-wgpu/src/: buffer.rs  draw_quad.rs  error.rs  filter_chain.rs  filter_pass.rs  framebuffer.rs  graphics_pipeline.rs  lib.rs  luts.rs  mipmap.rs  options.rs  samplers.rs  texture.rs  util.rs
librashader-runtime-wgpu/tests/: hdr.rs  hello_triangle.rs  triangle.rs
librashader-runtime/src/: array_chunks_mut.rs  binding.rs  filter_chain.rs  filter_pass.rs  framebuffer.rs  image.rs  lib.rs  parameters.rs  quad.rs  reflect.rs  render_target.rs  ringbuffer.rs  scaling.rs  semantics.rs  uniforms.rs
librashader-test/: Cargo.toml
librashader-test/src/: lib.rs
librashader-test/src/cli/: main.rs
librashader-test/src/render/: d3d11.rs  d3d9.rs  mod.rs  mtl.rs  wgpu.rs
librashader/src/: gl.rs  image.rs  lib.rs
librashader/tests/: reflect.rs
test/webgpu-example/: .gitignore  Cargo.toml  README.md  index.html
(+139 files in other folders)
