[workspace]
members = [
    "librashader",
    "librashader-common",
    "librashader-presets",
    "librashader-preprocess",
    "librashader-reflect",
    "librashader-runtime",
    "librashader-runtime-d3d11",
    "librashader-runtime-d3d12",
    "librashader-runtime-gl",
    "librashader-runtime-vk",
    "librashader-runtime-mtl",
    "librashader-runtime-wgpu",
    "librashader-cache",
    "librashader-capi",
    "librashader-build-script", "librashader-runtime-d3d9"]
resolver = "2"

[workspace.dependencies]
windows = "0.58.0"
ash = "0.38"
spirv_cross = { package = "librashader-spirv-cross", version = "0.26" }

objc2-metal = { version = "0.2" }
objc2 = { version = "0.5.0" }

wgpu = { version = "22", default-features = false }
wgpu-types = { version = "22" }

[workspace.metadata.release]

[profile.optimized]
inherits = "release"
lto = true
codegen-units = 1
