[package]
name = "librashader-capi"
edition = "2021"

license = "MPL-2.0 OR GPL-3.0-only"
version = "0.1.0-beta.7"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

[lib]
crate-type = [ "cdylib", "staticlib" ]

[features]
default = ["runtime-opengl", "runtime-d3d11", "runtime-vulkan"]
runtime-opengl = ["gl", "librashader/gl"]
runtime-d3d11 = ["windows", "librashader/d3d11"]
runtime-vulkan = ["ash", "librashader/vk"]

[dependencies]
librashader = { path = "../librashader", version = "0.1.0-beta.7", features = ["internal"] }
thiserror = "1.0.37"
paste = "1.0.9"
gl = { version = "0.14.0", optional = true }
rustc-hash = "1.1.0"
ash = { version = "0.37.2+1.3.238", optional = true }

[target.'cfg(windows)'.dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Graphics_Direct3D11",
]
optional = true

[package.metadata.cargo-post.dependencies]
cbindgen = { git = "https://github.com/eqrion/cbindgen" }

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu"]
