[package]
name = "librashader-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
opengl = ["gl"]
directx = ["windows"]

[dependencies]
gl = { version = "0.14.0", optional = true }
image = "0.24.5"
num-traits = "0.2.15"
#
#[dependencies.windows]
#optional = true
#version = "0.43.0"
