[package]
name = "librashader-common"
edition = "2021"

license = "MPL-2.0 OR GPL-3.0-only"
version = "0.1.0-alpha.1"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

[features]
default = []
opengl = ["gl"]
d3d11 = ["windows", "dxgi"]
dxgi = ["windows"]

[dependencies]
gl = { version = "0.14.0", optional = true }
num-traits = "0.2.15"

[dependencies.windows]
optional = true
version = "0.43.0"
features = [
]
