[package]
name = "librashader-pack"
version = "0.4.5"
edition = "2021"

[dependencies]
librashader-presets = { path = "../librashader-presets", version = "0.4.5", features = ["serde"] }
librashader-preprocess = { path = "../librashader-preprocess", version = "0.4.5", features = ["serde"] }
librashader-reflect= { path = "../librashader-reflect", version = "0.4.5" }

thiserror = "1.0.64"
serde = { version = "1.0", features = ["derive"], optional = true }
rayon = { workspace = true }
image = {workspace = true}
base64 = {  version = "0.22.1", optional = true }
serde_bytes = { version = "0.11.15", optional = true }

[features]
parse_legacy_glsl = ["librashader-presets/parse_legacy_glsl"]
serde = ["dep:serde", "dep:base64", "dep:serde_bytes"]

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rayon = { workspace = true }

[dev-dependencies]
anyhow = "1.0.89"
serde_json = "1.0.128"
rmp-serde = "1.3.0"