[package]
name = "librashader-presets"
edition = "2021"

license = "MPL-2.0 OR GPL-3.0-only"
version = "0.9.0"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

[dependencies]
thiserror = "2"
nom = "8.0.0"
nom_locate = "5.0.0"
librashader-common = { path = "../librashader-common", version = "0.9.0" }
num-traits = "0.2"
once_cell = "1"
# we don't need unicode
regex = {  version = "1", default-features = false, features = ["perf"] }
vec_extract_if_polyfill = "0.1.0"

serde = { version = "1.0", optional = true }

[features]
parse_legacy_glsl = []
serde = ["dep:serde", "serde/derive", "librashader-common/serde"]

[dev-dependencies]
glob = "0.3.1"
