[package]
name = "librashader-reflect"
edition = "2021"

license = "MPL-2.0 OR GPL-3.0-only"
version = "0.6.2"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

[dependencies]
glslang = "0.6.0"
bytemuck = "1.13.0"

thiserror = "2"
bitflags = "2.4.2"

librashader-common = { path = "../librashader-common", version = "0.6.2" }
librashader-preprocess = { path = "../librashader-preprocess", version = "0.6.2" }
librashader-presets = { path = "../librashader-presets", version = "0.6.2" }
librashader-pack = { path = "../librashader-pack", version = "0.6.2" }

spirv-cross2 = { workspace = true, optional = true }

naga = { version = "23", optional = true }
rspirv = { version = "0.12.0", optional = true }
spirv = { version = "0.3.0", optional = true}

serde = { version = "1.0", features = ["derive"], optional = true }
rustc-hash = "2.0.0"

[target.'cfg(windows)'.dependencies.spirv-to-dxil]
version = "0.4.7"
optional = true

[features]
default = ["cross", "naga", "wgsl", "msl"]
dxil = [ "spirv-cross2?/hlsl", "dep:spirv-to-dxil" ]
wgsl = [ "cross", "naga", "naga/wgsl-out", "dep:spirv", "dep:rspirv"]
cross = [ "spirv-cross2", "spirv-cross2/glsl", "spirv-cross2/hlsl", "spirv-cross2/msl" ]
naga = [ "dep:rspirv", "dep:spirv", "dep:naga", "naga/spv-in", "naga/spv-out", "naga/wgsl-out", "naga/msl-out" ]
serde = ["dep:serde", "serde/derive", "librashader-common/serde", "bitflags/serde"]
msl = [ "cross", "spirv-cross2/msl", "naga?/msl-out" ]

stable = []

unstable-naga-in = ["naga/glsl-in"]
