[package]
name = "librashader-runtime-gl"
edition = "2021"

license = "MPL-2.0 OR GPL-3.0-only"
version = "0.1.0-alpha.4"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

[dependencies]
librashader-common = { path = "../librashader-common", features = ["opengl"], version = "0.1.0-alpha.4" }
librashader-presets = { path = "../librashader-presets", version = "0.1.0-alpha.4" }
librashader-preprocess = { path = "../librashader-preprocess", version = "0.1.0-alpha.4" }
librashader-reflect = { path = "../librashader-reflect", version = "0.1.0-alpha.4", features = ["standalone"]   }
librashader-runtime = { path = "../librashader-runtime" , version = "0.1.0-alpha.4" }
spirv_cross = "0.23.1"
rustc-hash = "1.1.0"
gl = "0.14.0"
bytemuck = "1.12.3"
thiserror = "1.0.37"

[dev-dependencies]
glfw = "0.47.0"

[features]
gl4 = []
