[package]
name = "librashader-runtime-gl"
edition = "2021"

license = "MPL-2.0 OR GPL-3.0-only"
version = "0.3.0"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

[dependencies]
librashader-common = { path = "../librashader-common", features = ["opengl"], version = "0.3.0" }
librashader-presets = { path = "../librashader-presets", version = "0.3.0" }
librashader-preprocess = { path = "../librashader-preprocess", version = "0.3.0" }
librashader-reflect = { path = "../librashader-reflect", version = "0.3.0" }
librashader-runtime = { path = "../librashader-runtime" , version = "0.3.0" }
librashader-cache = { path = "../librashader-cache", version = "0.3.0" }
spirv_cross = { package = "librashader-spirv-cross", version = "0.25.1" }

glow = { version = "0.14", git = "https://github.com/chyyran/glow/", branch = "feat-named-framebuffer" }
bytemuck = { version = "1.12.3", features = ["derive"] }
thiserror = "1.0.37"
rayon = "1.6.1"

[dev-dependencies]
glfw = "0.47.0"

[package.metadata.docs.rs]
features = ["librashader-cache/docsrs"]
