[package]
name = "librashader-runtime-vk"
edition = "2021"

license = "MPL-2.0 OR GPL-3.0-only"
version = "0.1.0-beta.7"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librashader-common = { path = "../librashader-common", features = ["vulkan"], version = "0.1.0-beta.7" }
librashader-presets = { path = "../librashader-presets", version = "0.1.0-beta.7" }
librashader-preprocess = { path = "../librashader-preprocess", version = "0.1.0-beta.7" }
librashader-reflect = { path = "../librashader-reflect", version = "0.1.0-beta.7", features = []   }
librashader-runtime = { path = "../librashader-runtime" , version = "0.1.0-beta.7" }
spirv_cross = "0.23.1"
rustc-hash = "1.1.0"
bytemuck = "1.12.3"
thiserror = "1.0.37"
ash = { version = "0.37.1+1.3.235", features = ["linked", "debug"] }

[dev-dependencies]
num = "0.4.0"
glfw = "0.49.0"
winit = "0.27.5"
raw-window-handle = "0.5"
ash-window = "0.12.0"
