[package]
name = "librashader-runtime-vk"
edition = "2021"

license = "MPL-2.0 OR GPL-3.0-only"
version = "0.1.3"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librashader-common = { path = "../librashader-common", features = ["vulkan"], version = "0.1.3" }
librashader-presets = { path = "../librashader-presets", version = "0.1.3" }
librashader-preprocess = { path = "../librashader-preprocess", version = "0.1.3" }
librashader-reflect = { path = "../librashader-reflect", version = "0.1.3", features = []   }
librashader-runtime = { path = "../librashader-runtime" , version = "0.1.3" }
librashader-cache = { path = "../librashader-cache", version = "0.1.3" }

spirv_cross = { package = "librashader-spirv-cross", version = "0.23" }
rustc-hash = "1.1.0"
bytemuck = "1.12.3"
thiserror = "1.0.37"
ash = { version = "0.37.1+1.3.235", features = ["linked", "debug"] }
gpu-allocator = { version = "0.22.0", default-features = false, features = ["vulkan"] }
parking_lot = "0.12.1"
rayon = "1.6.1"

[dev-dependencies]
num = "0.4.0"
glfw = "0.49.0"
winit = "0.27.5"
raw-window-handle = "0.5"
ash-window = "0.12.0"


[[test]]
name = "triangle"

[package.metadata.docs.rs]
features = ["librashader-cache/docsrs"]
