[package]
name = "librashader-test"
version = "0.1.0"
edition = "2021"

[dependencies]
librashader = { version = "0.4.5", path = "../librashader" }
librashader-runtime = { version = "0.4.5", path = "../librashader-runtime"}
wgpu = { version = "22", default-features = false  }
wgpu-types = { version = "22" }
anyhow = "1.0.86"
image = "0.25.2"
gfx-maths = "0.2.8"

ash = "0.38.0+1.3.281"

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI",
]

[target.'cfg(target_vendor="apple")'.dependencies]
objc2-metal = { version = "0.2.0" , features = [ "all" ] }
objc2 = { version = "0.5.0", features = ["apple"] }